--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="menu"><a href="#">Inicio</a></div>
     </nav>
 
-<!--Inicio de sesion-->
+    <!--Inicio de sesion-->
     <main class="container-v3" style="max-width:480px">
         <section class="card">
             <div class="card-header">Iniciar sesión</div>
@@ -45,6 +45,11 @@
 
     <script type="module" src="./js/app.js"></script>
     <script type="module" src="./js/auth.js"></script>
+    <script type="module">
+        import { autoLoginDemo } from "./js/auth.js";
+        autoLoginDemo();
+    </script>
+
 </body>
 
 </html>
